CI: fix sge-android-robolectric conscrypt UnsatisfiedLinkError on aarch64 (ISS-737)
Robolectric's AndroidTestEnvironment.setUpApplicationState installs Conscrypt
as the OpenSSL security provider, whose static init System.loadLibrary's
conscrypt_openjdk_jni-<os>-<arch>. conscrypt-openjdk-uber 2.5.2 ships a native
only for {linux,osx,windows}-x86_64 (+ windows-x86) — no aarch64 native for any
OS. Robolectric already defaults ConscryptMode=OFF on macos-aarch64 (that leg is
green); linux-aarch64 and windows-aarch64 default ON and die with
UnsatisfiedLinkError. These tests exercise the Android SharedPreferences/Clipboard
impls, not TLS, so force robolectric.conscryptMode=OFF on every platform, making
the aarch64 legs behave like the green macos-aarch64 leg. Also strip the inherited
-Djava.library.path=<rust build dir> clobber from this fork (it runs no sge rust
natives); --enable-native-access and mac -XstartOnFirstThread are preserved.